# foxix-terminal

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  default_config.conf  foxix-install.sh
bench/: benchmark_v4.sh
release/: foxix-install.sh
release/foxix-0.1.0-linux-x86_64/: foxix-install.sh
src/: lib.rs  main.rs  main.rs.backup
src/config/: config.rs  mod.rs  wallpaper.rs
src/core/: io.rs  mod.rs  process.rs  pty.rs
src/kittens/: kitten.rs  mod.rs
src/notifications/: mod.rs  notifications.rs
src/renderer/: box_drawing.rs  glyph.rs  gpu.rs  gpu.rs.backup  mod.rs  texture.rs
src/shell/: bootstrap.rs  mod.rs  shell_integration.rs
src/terminal/: ansi.rs  buffer.rs  cursor.rs  graphics.rs  mod.rs
src/ui/: application.rs  mod.rs  tabs.rs
src/ui_layout/: base.rs  grid.rs  mod.rs  stack.rs  tall.rs  vertical.rs
src/ui_marks/: marks.rs  mod.rs
src/utils/: color.rs  mod.rs  ring_buffer.rs
src/window/: input.rs  mod.rs  wayland.rs  x11.rs
