[package]
name = "foxix"
version = "0.1.0"
edition = "2021"
authors = ["jepheMD"]
description = "Foxix — high-performance terminal emulator"
license = "MIT"

[[bin]]
name = "foxix"
path = "src/main.rs"

[lib]
name = "foxix"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
libc = "0.2"
vte = "0.14"

winit = { version = "0.30", features = ["x11", "wayland"] }
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
gl = "0.14"

toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

parking_lot = "0.12"
once_cell = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
unicode-width = "0.1"

dashmap = "5"
freetype-rs = "0.38.0"

# Extracción de colores del wallpaper
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }

# Shell y sistema de plugins
which = "7"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
